feat: home screen, fonts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": "./",
     "paths": {
       "@assets/*": ["./assets/*"],
-      "@screens/*": ["./src/screens/*"]
+      "@screens/*": ["./src/screens/*"],
+      "@components/*": ["./src/components/*"]
     }
   }
 }
