feat: navigation, translations, basic screens

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "paths": {
       "@assets/*": ["./assets/*"],
       "@screens/*": ["./src/screens/*"],
-      "@components/*": ["./src/components/*"]
+      "@components/*": ["./src/components/*"],
+      "@language/*": ["./src/language/*"],
+      "@constans/*": ["./src/constans/*"]
     }
   }
 }
