--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "classnames": "^2.3.2",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
     "i18next": "^23.7.6",
@@ -21,6 +23,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.72.6",
+    "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^14.0.0",
@@ -33,6 +36,7 @@
     "@types/react": "^18.2.37",
     "@types/react-test-renderer": "^18.0.6",
     "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.2.2"
   },
